--- a/manifest.json
+++ b/manifest.json
@@ -13,21 +13,21 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "badge.svg",
-        "new.png",
-        "notification.mp3"
+        "img/badge.svg",
+        "img/new.png",
+        "audio/notification.mp3"
       ],
       "use_dynamic_url": true
     }
   ],
   "action": {
     "default_title": "Rtl theme product sales notification",
-    "default_icon": "badge.png",
+    "default_icon": "img/badge.png",
     "default_popup": "popup.html"
   },
   "icons": {
-    "16": "badge.png",
-    "48": "badge.png",
-    "128": "badge.png"
+    "16": "img/badge.png",
+    "48": "img/badge.png",
+    "128": "img/badge.png"
   }
 }
